--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   },
   "scripts": {
     "postinstall": "bower install",
-
     "start": "http-server -p 8000",
     "test": "karma start test/karma.conf.js",
-
     "update-webdriver": "webdriver-manager update",
     "protractor": "protractor test/protractor-conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
-
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+  },
+  "dependencies": {
+    "express": "~3.5.1",
+    "nodemon": "~1.0.17",
+    "request": "~2.34.0",
+    "body-parser": "~1.0.1"
   }
 }
