--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
   "dependencies": {
+    "body-parser": "~1.0.1",
     "express": "~3.5.1",
+    "mysql": "^2.1.1",
     "nodemon": "~1.0.17",
-    "request": "~2.34.0",
-    "body-parser": "~1.0.1"
+    "request": "~2.34.0"
   }
 }
