--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.15"
+    "angular-mocks": "~1.2.15",
+    "aight": "~1.2.2",
+    "d3": "~3.4.4"
   }
 }
