--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,10 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.15",
     "aight": "~1.2.2",
-    "d3": "~3.4.4"
+    "d3": "~3.4.4",
+    "angular-charts": "~0.0.1"
+  },
+  "resolutions": {
+    "d3": "~3.3.10"
   }
 }
