--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "~3.5.1",
     "mysql": "^2.1.1",
     "nodemon": "~1.0.17",
-    "request": "~2.34.0"
+    "request": "~2.34.0",
+    "crypto": "0.0.3"
   }
 }
