Add email module and set up email function

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "request": "~2.34.0",
     "crypto": "0.0.3",
     "tedious": "^0.2.2",
-    "tedious-connection-pool": "^0.1.1"
+    "tedious-connection-pool": "^0.1.1",
+    "nodemailer": "^0.6.2"
   }
 }
