Refactor server functions and add more email functionality structure

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto": "0.0.3",
     "tedious": "^0.2.2",
     "tedious-connection-pool": "^0.1.1",
-    "nodemailer": "^0.6.2"
+    "nodemailer": "^0.6.2",
+    "es5-shim": "^2.3.0"
   }
 }
