--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tedious": "^0.2.2",
     "tedious-connection-pool": "^0.1.1",
     "nodemailer": "^0.6.2",
-    "es5-shim": "^2.3.0"
+    "es5-shim": "^2.3.0",
+    "saml20": "^0.1.0"
   }
 }
