--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "JNC8App",
   "private": true,
-  "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "version": "0.1.6",
+  "description": "A high blood pressure treatment calcuator based on JNC8 recommendations.",
+  "repository": "https://github.com/moxehealth/JNC8",
   "license": "MIT",
   "devDependencies": {
     "karma": "~0.10",
@@ -17,8 +17,7 @@
     "test": "karma start test/karma.conf.js",
     "update-webdriver": "webdriver-manager update",
     "protractor": "protractor test/protractor-conf.js",
-    "test-single-run": "karma start test/karma.conf.js  --single-run",
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    "test-single-run": "karma start test/karma.conf.js  --single-run"
   },
   "dependencies": {
     "body-parser": "~1.0.1",
