--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "nodemailer": "^0.6.2",
     "es5-shim": "^2.3.0",
     "saml20": "^0.1.0",
-    "node-xml-lite": "0.0.3"
+    "libxmljs": "^0.9.0"
   }
 }
